# florust

./: Cargo.toml  README.md
docs/server/: plugins.md
florust_client/: Cargo.toml
florust_common/: Cargo.toml  README.md
florust_common/src/: lib.rs  plugin.rs  server.rs  server_data_source_error.rs  server_plugin.rs
florust_data_source/: Cargo.toml  README.md
florust_server/: Cargo.toml  README.md
florust_server/src/: circular_vec.rs  data_source.rs  default_plugins.rs  main.rs  manager_and_data.rs
florust_server/src/circular_vec/: mod.rs
florust_server/src/data_source/: mod.rs
