[package]
name = "florust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde_json = "1.0.107"
tera = "1.19.1"
florust_common = { path = "../florust_common/" }
thiserror = "1.0.50"

[features]
default = ["iinteger_default_plugin", "uinteger_default_plugin", "float_default_plugin"]
iinteger_default_plugin = []
uinteger_default_plugin = []
float_default_plugin = []
